--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Innovations</title>
@@ -9,10 +10,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#212121">
+  <link rel="apple-touch-icon" href="./assets/icons/icon-512x512.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="./assets/icons/icon-167x167.png">
 
 </head>
+
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
