--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon-180x180.png">
   <link rel="apple-touch-icon" sizes="167x167" href="./assets/icons/icon-167x167.png">
+  <script src="node_modules/chart.js/src/chart.js"></script>
 
 </head>
 
